--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReadaddictsNET8\ReadaddictsNET8.csproj" />
+    <ProjectReference Include="..\Readaddicts.Api\Readaddicts.Api.csproj" />
   </ItemGroup>
 
 </Project>
